--- a/css/main.css
+++ b/css/main.css
@@ -1091,7 +1091,7 @@
 			-webkit-transition: -webkit-transform 0.325s ease-in-out, -webkit-filter 0.325s ease-in-out;
 			-ms-transition: -ms-transform 0.325s ease-in-out, -ms-filter 0.325s ease-in-out;
 			transition: transform 0.325s ease-in-out, filter 0.325s ease-in-out;
-			background-image: url("https://img.jcxiaozhan.top/%E5%AF%BC%E8%88%AA%E9%A1%B5%E8%83%8C%E6%99%AF.jpg");
+			background-image: url("https://img1.imgtp.com/2022/11/03/w3KQcYEM.jpg");
 			background-position: center;
 			background-size: cover;
 			background-repeat: no-repeat;
